# template_repository

./: Makefile  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.project_slug }}/: .gitignore  Makefile  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/.github/workflows/: ci.yml
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: __init__.py
{{ cookiecutter.project_slug }}/tests/: test_smoke.py
